add refresh config

--- a/WebContent/conf/dynamic-refresh-unable.properties
+++ b/WebContent/conf/dynamic-refresh-unable.properties
@@ -29,18 +29,16 @@ case.client.distribute.time=10000
 case.client.retry.time=20
 
 ####################################################timer############################################
-#\u5EF6\u8FDF\u6267\u884C
 case.dftag.timer.delay=1
-#\u6267\u884C\u95F4\u9694
 case.dftag.timer.period=5
 
-max_case_size_for_one_lab = 80
+max_case_size_for_one_lab=80
 #ALL DB configs
-DftCaseDB=/home/huanglei/ATS/DB/dftTag.db
-DailyCaseDB=/home/huanglei/ATS/DB/caseinfo.db
-CaseDependsDB=/home/huanglei/ATS/DB/caseinfo.db
-CaseInfoDB=/home/huanglei/ATS/DB/caseinfo.db
-PortingCaseDB=/home/huanglei/ATS/DB/caseinfo.db
+DftCaseDB=D:/dbs/DB/dftTag.db
+DailyCaseDB=D:/dbs/DB/caseinfo.db
+CaseDependsDB=D:/dbs/DB/caseinfo.db
+CaseInfoDB=D:/dbs/DB/caseinfo.db
+PortingCaseDB=D:/dbs/DB/caseinfo.db
 
 case.client.sftp.sendshellname=init.sh
 case.client.sftp.sourcepath=""
